chore: directive creation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div>
-  <section class="section__form">
+  <section class="section__form" [autoScroll]="formEl">
     <form class="form" [formGroup]="form" #formElement>
       <div class="form-group">
         <label for="form-group__name">Name</label>
