--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div>
-  <section class="section__form" [autoScroll]="formEl">
-    <form class="form" [formGroup]="form" #formElement>
+  <section class="section__form">
+    <form class="form" [formGroup]="form" autoScroll>
       <div class="form-group">
         <label for="form-group__name">Name</label>
         <input type="text" class="form-group__control" />
